Añadir nuevos proyectos y manejo de excepciones
Se han agregado proyectos "Infrastructure", "Domain" y "Infrastructure.AppProgrammingInt" a la solución.
Se han actualizado las referencias de paquetes en `Presentation.AppProgrammingInt.ClientePersona.csproj` y se ha configurado la inyección de dependencias en `Program.cs` para manejar límites de tasa IP.
Además, se han realizado cambios en `appsettings.json` para incluir configuraciones de conexión y CORS.
Se ha creado la clase `GoblalExceptionHandler` para el manejo centralizado de excepciones.

--- a/Presentation.AppProgrammingInt.ClientePersona.csproj
+++ b/Presentation.AppProgrammingInt.ClientePersona.csproj
@@ -10,9 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Domain.AppProgrammingInt.ClientePersona\Domain.AppProgrammingInt.csproj" />
   </ItemGroup>
 
 </Project>
