--- a/src/Presentation/Presentation.ApplicationProgrammingInterface/Presentation.ApplicationProgrammingInterface.csproj
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface/Presentation.ApplicationProgrammingInterface.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -17,6 +17,8 @@
   </ItemGroup>
  <ItemGroup>
     <ProjectReference Include="..\..\Domain\Domain.AppProgrammingInt.ClientePersona\Domain.AppProgrammingInt.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Infrastructure.AppProgrammingInt.DataBase.Configuration\Infrastructure.AppProgrammingInt.DataBase.Configuration.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Infrastructure.AppProgrammingInt.IOC\Infrastructure.AppProgrammingInt.IOC.csproj" />
   </ItemGroup>
 
 
