Añadir proyecto PersonaCliente y mejorar servicios
Se ha creado un nuevo proyecto `Presentation.ApplicationProgrammingInterface.PersonaCliente` para gestionar personas, incluyendo la implementación de métodos mejorados en `ApPersonaServices` y `ApPersonaRepository`.

Se han actualizado varios controladores para utilizar el nuevo espacio de nombres y se ha mejorado el manejo de excepciones en `ClientesController.cs`.

Además, se han realizado cambios en los archivos de configuración para integrar Azure Application Insights y se han añadido nuevas referencias de paquetes para soportar las funcionalidades implementadas.

--- a/src/Presentation/Presentation.ApplicationProgrammingInterface/appsettings.json
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface/appsettings.json
@@ -1,36 +1,39 @@
 {
-    "Appsettings": {
-        "ConnectionString": {
-            "AppProgrammingInt": "Server=localhost;Database=AppProgrammingInt;User id=sa;Password=Mecatronica1;TrustServerCertificate=True;"
+  "Appsettings": {
+    "ConnectionString": {
+      "AppProgrammingInt": "Server=localhost;Database=AppProgrammingInt;User id=sa;Password=Mecatronica1;TrustServerCertificate=True;"
+    },
+    "Configurations": {
+      "Security": {
+        "SecretKeys": {
+          "GateWaySecretKey": "asdv234234^&%&^%&^hjsdfb2%%%"
         },
-        "Configurations": {
-            "Security": {
-                "SecretKeys": {
-                    "GateWaySecretKey": "asdv234234^&%&^%&^hjsdfb2%%%"
-                },
-                "IpRateLimiting": {
-                    "EnableEndpointRateLimiting": true,
-                    "StackBlockedRequests": false,
-                    "RealIpHeader": "X-Real-IP",
-                    "ClientIdHeader": "X-ClientId",
-                    "HttpStatusCode": 429,
-                    "GeneralRules": [
-                        {
-                            "Endpoint": "*",
-                            "Period": "1m",
-                            "Limit": 100
-                        }
-                    ]
-                },
-                "CorsAlows": ""
+        "IpRateLimiting": {
+          "EnableEndpointRateLimiting": true,
+          "StackBlockedRequests": false,
+          "RealIpHeader": "X-Real-IP",
+          "ClientIdHeader": "X-ClientId",
+          "HttpStatusCode": 429,
+          "GeneralRules": [
+            {
+              "Endpoint": "*",
+              "Period": "1m",
+              "Limit": 100
             }
+          ]
         },
-        "Logging": {
-            "LogLevel": {
-                "Default": "Information",
-                "Microsoft.AspNetCore": "Warning"
-            }
-        },
-        "AllowedHosts": "*"
-    }
+        "CorsAlows": ""
+      }
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=c80f6593-d831-4605-a7d0-2f9bae6bea09;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=f9b39769-9df1-46be-8445-f5083ee46b23"
+  }
 }
