--- a/src/Presentation/Presentation.ApplicationProgrammingInterface/Presentation.ApplicationProgrammingInterface.PersonaCliente.csproj
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface/Presentation.ApplicationProgrammingInterface.PersonaCliente.csproj
@@ -7,10 +7,13 @@
     <UserSecretsId>4b345963-b44a-4845-8d0e-547154e1aeb2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <ApplicationInsightsResourceId>/subscriptions/d0cedcbc-5269-46bc-b3f9-1ff62d9367fd/resourceGroups/ChallengeErickSalinas/providers/microsoft.insights/components/AppInsgChallenge</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.13.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
