--- a/src/Presentation/Presentation.ApplicationProgrammingInterface/appsettings.json
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface/appsettings.json
@@ -35,5 +35,13 @@
   },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=c80f6593-d831-4605-a7d0-2f9bae6bea09;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=f9b39769-9df1-46be-8445-f5083ee46b23"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "ericksaunoutlook.onmicrosoft.com",
+    "TenantId": "b9e75df0-d97b-4928-a30a-29c3e6713e96",
+    "ClientId": "884c0ad6-581b-4fd2-945c-5fed6bf14c35",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": ""
   }
 }
