Añadir nuevos proyectos y servicios a la solución
Se han agregado los proyectos `Infrastructure.AppProgrammingInt.Refit` y `Infrastructure.AppProgrammingInt.Agent` al archivo de solución. Se han actualizado las configuraciones y referencias de proyecto en `Application.AppProgrammingInt.csproj`.

Se han modificado varios servicios para integrar la lógica de acceso a datos a través de nuevos agentes. Se han añadido métodos en las interfaces de servicios y se han creado nuevas clases de modelo para manejar los datos.

Se han implementado nuevos controladores para gestionar las solicitudes HTTP y se han realizado cambios en `appsettings.json` para incluir configuraciones necesarias. También se han definido nuevas interfaces de API y se ha configurado Refit para facilitar las llamadas a las APIs.

--- a/src/Presentation/Presentation.ApplicationProgrammingInterface.CuentaMovimiento/Presentation.ApplicationProgrammingInterface.CuentaMovimiento.csproj
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface.CuentaMovimiento/Presentation.ApplicationProgrammingInterface.CuentaMovimiento.csproj
@@ -26,5 +26,8 @@
 		<ProjectReference Include="..\..\Infrastructure\Infrastructure.AppProgrammingInt.DataBase.Configuration\Infrastructure.AppProgrammingInt.DataBase.Configuration.csproj" />
 		<ProjectReference Include="..\..\Infrastructure\Infrastructure.AppProgrammingInt.IOC\Infrastructure.AppProgrammingInt.IOC.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Models\" />
+	</ItemGroup>
 
 </Project>
