--- a/src/Presentation/Presentation.ApplicationProgrammingInterface.CuentaMovimiento/appsettings.json
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface.CuentaMovimiento/appsettings.json
@@ -1,9 +1,12 @@
 {
     "Appsettings": {
+        "ApiName": "CuentaMovimiento",
         "ConnectionString": {
             "AppProgrammingInt": "Server=localhost;Database=AppProgrammingInt;User id=sa;Password=Mecatronica1;TrustServerCertificate=True;"
         },
         "Configurations": {
+            "AgentoConnectCuentaMovimiento": "https://localhost:44336/",
+            "AgentoConnectPersonaCuenta": "https://localhost:44302/",
             "Security": {
                 "SecretKeys": {
                     "GateWaySecretKey": "asdv234234^&%&^%&^hjsdfb2%%%"
