--- a/src/Application/Application.AppProgrammingInt/Application.AppProgrammingInt.csproj
+++ b/src/Application/Application.AppProgrammingInt/Application.AppProgrammingInt.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.AppProgrammingInt.Agent.PersonaCliente\Infrastructure.AppProgrammingInt.Agent.PersonaCliente.csproj" />
     <ProjectReference Include="..\..\Domain\Domain.AppProgrammingInt.ClientePersona\Domain.AppProgrammingInt.csproj" />
   </ItemGroup>
 
