--- a/src/Presentation/Presentation.ApplicationProgrammingInterface/appsettings.json
+++ b/src/Presentation/Presentation.ApplicationProgrammingInterface/appsettings.json
@@ -1,38 +1,41 @@
 {
-  "Appsettings": {
-    "ConnectionString": {
-      "AppProgrammingInt": "Server=localhost;Database=AppProgrammingInt;User id=sa;Password=Mecatronica1;TrustServerCertificate=True;"
-    },
-    "Configurations": {
-      "Security": {
-        "SecretKeys": {
-          "GateWaySecretKey": "asdv234234^&%&^%&^hjsdfb2%%%"
+    "Appsettings": {
+        "ApiName": "PersonaCliente",
+        "ConnectionString": {
+            "AppProgrammingInt": "Server=localhost;Database=AppProgrammingInt;User id=sa;Password=Mecatronica1;TrustServerCertificate=True;"
         },
-        "IpRateLimiting": {
-          "EnableEndpointRateLimiting": true,
-          "StackBlockedRequests": false,
-          "RealIpHeader": "X-Real-IP",
-          "ClientIdHeader": "X-ClientId",
-          "HttpStatusCode": 429,
-          "GeneralRules": [
-            {
-              "Endpoint": "*",
-              "Period": "1m",
-              "Limit": 100
+        "Configurations": {
+            "AgentoConnectCuentaMovimiento": "https://localhost:44336",
+            "AgentoConnectPersonaCuenta": "https://localhost:44302",
+            "Security": {
+                "SecretKeys": {
+                    "GateWaySecretKey": "asdv234234^&%&^%&^hjsdfb2%%%"
+                },
+                "IpRateLimiting": {
+                    "EnableEndpointRateLimiting": true,
+                    "StackBlockedRequests": false,
+                    "RealIpHeader": "X-Real-IP",
+                    "ClientIdHeader": "X-ClientId",
+                    "HttpStatusCode": 429,
+                    "GeneralRules": [
+                        {
+                            "Endpoint": "*",
+                            "Period": "1m",
+                            "Limit": 100
+                        }
+                    ]
+                },
+                "CorsAlows": ""
             }
-          ]
         },
-        "CorsAlows": ""
-      }
+        "Logging": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "AllowedHosts": "*"
     },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=c80f6593-d831-4605-a7d0-2f9bae6bea09;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=f9b39769-9df1-46be-8445-f5083ee46b23"
   },
